src/components/GameContainer/Game/Column/Column.scss
.column {
  display: flex;
  flex-direction: column;
  font-family: monospace;
  font-weight: bold;

  font-size: 5rem;

  -webkit-touch-callout: none; /* iOS Safari */
  -webkit-user-select: none; /* Safari */
  -khtml-user-select: none; /* Konqueror HTML */
  -moz-user-select: none; /* Old versions of Firefox */
  -ms-user-select: none; /* Internet Explorer/Edge */
  user-select: none;

  cursor: pointer;
  touch-action: none;
  pointer-events: none;
}

.cell {
  display: flex;
  align-items: center;
  justify-content: center;

  pointer-events: all;

  width: 100px;
  height: 100px;
}

